# Jobly

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  alembic.ini  pyproject.toml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  nginx.conf
docs/: PRD.md
src/jobly/: __init__.py  config.py  main.py
src/jobly/bot/filters/: admin.py
src/jobly/bot/handlers/: admin.py  browse.py  credits.py  cv.py  preferences.py  profile.py  referral.py  start.py  tailor.py
src/jobly/bot/keyboards/: jobs.py  onboarding.py
src/jobly/bot/middlewares/: auth.py  db.py  (+2 more)
src/jobly/constants/: categories.py  levels.py  locations.py
src/jobly/db/: seed.py  session.py
src/jobly/i18n/: strings.py
src/jobly/models/: __init__.py  credit.py  cv.py  job.py  notification.py  reference.py  user.py
src/jobly/scrapers/: base.py  dedup.py  registry.py
src/jobly/services/: ai.py  cover_letter.py  credit.py  cv_parser.py  cv_tailor.py  doc_generator.py  job_matcher.py  notification.py  payment.py  user.py
src/jobly/web/: routes.py
src/jobly/workers/: notify.py  scheduler.py  scrape.py
tests/: conftest.py  factories.py
tests/test_handlers/: conftest.py  test_onboarding.py  test_profile.py  test_referral.py  test_tailor.py
tests/test_integration/: conftest.py  test_apify_live.py  test_moonshot_live.py  test_xendit_live.py
tests/test_scrapers/: test_dedup.py  test_registry.py
tests/test_services/: test_credit.py  test_cv_parser.py  test_doc_generator.py  test_i18n.py  test_notification.py  test_throttle.py
tests/test_webhooks/: conftest.py  test_xendit_webhook.py
(+9 files in other folders)
